<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:orientation="vertical"
    tools:context=".TransaccionFormActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        app:navigationIconTint="@color/white"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_md">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/surface_card"
                app:cardCornerRadius="@dimen/corner_radius_lg"
                app:cardElevation="4dp"
                app:strokeColor="@color/divider"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_md">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilConcepto"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_concepto"
                        app:errorEnabled="true"
                        app:helperText="@string/helper_concepto"
                        app:startIconDrawable="@drawable/ic_ingreso">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editConcepto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapSentences"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilMonto"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_md"
                        android:hint="@string/hint_monto"
                        app:errorEnabled="true"
                        app:helperText="@string/helper_monto"
                        app:prefixText="S/ "
                        app:startIconDrawable="@drawable/ic_gasto">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editMonto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        style="@style/FormLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_md"
                        android:text="@string/label_tipo" />

                    <RadioGroup
                        android:id="@+id/radioGroupTipo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_sm"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioIngreso"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/spacing_sm"
                            android:layout_weight="1"
                            android:background="@drawable/bg_tipo_selector_ingreso"
                            android:button="@null"
                            android:drawableStart="@drawable/ic_ingreso"
                            android:drawablePadding="@dimen/spacing_sm"
                            android:gravity="center"
                            android:padding="@dimen/spacing_md"
                            android:text="@string/tipo_ingreso"
                            android:textColor="@color/ingreso_dark"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/radioGasto"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_sm"
                            android:layout_weight="1"
                            android:background="@drawable/bg_tipo_selector_gasto"
                            android:button="@null"
                            android:drawableStart="@drawable/ic_gasto"
                            android:drawablePadding="@dimen/spacing_sm"
                            android:gravity="center"
                            android:padding="@dimen/spacing_md"
                            android:text="@string/tipo_gasto"
                            android:textColor="@color/gasto_dark"
                            android:textStyle="bold" />
                    </RadioGroup>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/btnGuardar"
                style="@style/ButtonPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_lg"
                android:text="@string/accion_guardar" />

            <Button
                android:id="@+id/btnEliminar"
                style="@style/ButtonDanger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_sm"
                android:text="@string/accion_eliminar"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
